export class InputAdapter {
  bind(scene, player) {
    throw new Error("Not implemented");
  }
}
